--- a/client/src/style/account_profile.css
+++ b/client/src/style/account_profile.css
@@ -1,5 +1,5 @@
 .aspect-ratio-container {
-    margin: 0 auto;
+    margin: 40px auto;
     width: 200px;
     height: 200px;
     border-radius: 50%;
