--- a/Client/src/style/attendance.css
+++ b/Client/src/style/attendance.css
@@ -1,9 +1,7 @@
-
-
 .checkin-container {
     flex-grow: 1;
     padding: 20px;
-    margin-left: 340px; 
+    margin-left: 340px;
 }
 
 .checkin-container h1 {
@@ -60,33 +58,57 @@
     flex-direction: column;
     align-items: center;
 }
-input[type="text"]{
-border:none;
+
+input[type="text"] {
+    border: none;
 }
-.tablecell{
-font-weight: bold;
-color: white;
+
+.tablecell {
+    font-weight: bold;
+    color: white;
 }
-.filter-controls{
-margin-bottom: 20px;
+
+.filter-controls {
+    margin-bottom: 20px;
 }
+
 @media (max-width: 768px) {
-.checkins-list h2{
-margin-left: 100px;
-margin-top:20px;
-font-size: 35px;
-text-align: center;
-}
+    .checkins-list h2 {
+        margin-left: 100px;
+        margin-top: 20px;
+        font-size: 35px;
+        text-align: center;
+    }
+
     .checkin-page {
-        flex-direction: column; /* Stack items vertically on small screens */
+        flex-direction: column;
+        /* Stack items vertically on small screens */
         margin-left: -345px;
     }
 
     .sidebar {
-        width: 100%; /* Full width on small screens */
+        width: 100%;
+        /* Full width on small screens */
     }
-.filter-controls{
-width:50%;
-margin-bottom:20px;
-}
+
+    .filter-controls {
+        width: 60%;
+        display: block;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .eventfilter {
+        width: 50%;
+    }
+
+    .eventfilterId {
+        margin-left: 100px;
+    }
+
+    .button-group {
+        margin-right: 140px;
+        width: 60%;
+    }
+
 }
