updated reward part, some not working
redeemform cannot submit and store

--- a/Client/src/style/rewards/redemptionshop.css
+++ b/Client/src/style/rewards/redemptionshop.css
@@ -51,6 +51,12 @@
     margin-bottom: 50px;
 }
 
+.products h2 {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 30px;
+}
+
 /* button */
 .redeembutton {
     margin-left: 5px;
