--- a/Client/src/style/rewards/redeemform.css
+++ b/Client/src/style/rewards/redeemform.css
@@ -66,7 +66,9 @@
 }
 
 .product-details h2 {
-    margin-top: 20px;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 30px;
 }
 
 .product-details img {
