--- a/Client/src/style/rewards/rewardsprofile.css
+++ b/Client/src/style/rewards/rewardsprofile.css
@@ -7,11 +7,35 @@ hr {
   margin-top: -20px;
 }
 
-.grey-rectangle {
+.summary-rectangle {
   width: 100%;
   height: 300px; /* Adjust the height as needed */
   background-color: #91E1A3; /* Grey color */
   margin-bottom: 50px; /* Space between the rectangle and the table */
+}
+
+/* leaf points */
+.summary-rectangle-content .balance {
+  font-size: 40px;
+  padding-top: 40px;
+  margin-bottom: -20px;
+  margin-top: 20px;
+}
+
+.summary-rectangle-content .leaf-points {
+  font-size: 40px;
+}
+
+.summary-rectangle-content .total-leaves {
+  color: #14772B;
+  margin-top: -20px;
+  font-weight: bold;
+}
+
+.summary-rectangle-content .as-of-today {
+  color: #4f4f4f;
+  font-weight: bold;
+  margin-top: -10px;
 }
 
 /* table */
