--- a/Client/src/style/rewards/redeemform.css
+++ b/Client/src/style/rewards/redeemform.css
@@ -1,32 +1,7 @@
-/* banner */
-.headbanner {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.headbanner img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    max-height: 250px;
-}
-
-.headbanner h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 40px;
-    font-weight: bold;
-    margin: 0;
-}
-
 /* back */
 .back {
     display: flex;
-    margin-left: 30px;
+    margin-left: 20px;
     margin-bottom: 20px;
 }
 
@@ -49,13 +24,6 @@
 .back p a:hover {
     color: #14772B;
     text-decoration: underline;
-}
-
-/* h2 text */
-.info {
-    margin-top: 30px;
-    margin-left: 100px;
-    margin-bottom: 30px;
 }
 
 /* product */
@@ -110,16 +78,37 @@
     color: red;
 }
 
+/* form layout */
 .form-section {
     display: flex;
-    justify-content: flex-end;
-    margin-left: 200px;
-    margin-right: 200px;
+    justify-content: space-between;
+    padding: 20px;
 }
 
-.form-wrapper {
-    flex: 1;
-    margin-right: 20px; /* Adjust the space between form and product details */
+.product-details, .form-fields {
+    flex: 1 1 45%; /* Adjust the width as needed */
+    margin: 10px;
+}
+
+.product-details img.product-image {
+    width: 40%;
+    height: auto;
+}
+
+label {
+    align-self: flex-start;
+}
+
+/* detail */
+.collection-detail p{
+    text-align: left;
+}
+
+.collection-detail h2 {
+    text-align: left;
+    margin-top: 10px;
+    font-size: 24px;
+    color: black;
 }
 
 /* button */
@@ -147,13 +136,79 @@
 
 /* detail */
 .detail {
-    margin-left: 100px;
+    margin-top: 20px;
 }
 
 /* validation error */
 .error-message {
     color: red;
-    margin-left: 100px;
+    margin-left: 10px;
     margin-top: -10px;
     margin-bottom: 20px;
+}
+
+/* Responsive design for mobile devices */
+@media (max-width: 960px) {
+    .product-details h2 {
+        padding-left: 240px;
+    }
+
+    .collection-detail h2 {
+        padding-left: 240px;
+        font-size: 2vw;
+    }
+
+    .collection-detail p {
+        font-size: 1.5vw;
+    }
+
+    .checkboxes-container {
+        margin-right: -80px;
+    }
+
+    .submitbutton {
+        margin-left: 0px;
+    }
+}
+
+@media (max-width: 500px) {
+    .form-section {
+        display: block;
+    }
+
+    .product-details img.product-image {
+        width: 40%;
+        height: auto;
+        margin-left: 140px;
+    }
+
+    .product-details h2 {
+        padding-left: 350px;
+        font-size: 4vw;
+    }
+
+    .product-details p {
+        padding-left: 120px;
+    }
+
+    .collection-detail h2 {
+        padding-left: 250px;
+        font-size: 4vw;
+    }
+
+    .collection-detail p {
+        text-align: center;
+        padding-right: 20px;
+        font-size: 3vw;
+    }
+
+    .checkboxes-container {
+        margin-right: -100px;
+    }
+
+    .submitbutton {
+        font-size: 3vw;
+        margin-left: 150px;
+        padding: 10px 20px;
+    }
 }
